# MandelbrotSet

./: .gitignore  CMakeLists.txt  Makefile  README.md  color_conversion.h  main.cpp  mandelbrot.cpp  mandelbrot.h  out
src/: color_conversion.h  main.cpp  mandelbrot.cpp  mandelbrot.h  stopwatch.cpp  stopwatch.h
src/ui/: ui.cpp  ui.h
